# senv

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  conda_env.lock.json  conda_venv.lock.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  todos.md
.github/workflows/: ci.yml  deploy-docs.yaml  senvx-test.yml  senvx.yml
anaconda_client_locked/: conda_env.lock.json
config/: index.html
docs/: config.md  env.md  index.md  package.md  pyproject.md  venv.md
package/: index.html
pyproject/: index.html
pysenv/: command_lambdas.py  config.py  errors.py  log.py  main.py  shell.py  utils.py
pysenv/dev_env/: env.py  pyproject_to_conda.py
pysenv/package/: package.py
pysenv/settings/: config.py  settings_writer.py
pysenv/settings_writer/: settings_writer.py
pysenv/tests/: conftest.py
pysenv/tests/integration/: test_cli_package.py  test_cli_venv.py
pysenv/tests/static/: pysenv_override_pyproject.toml  simple_pyproject.toml  small_conda_pyproject.toml  with_conda_channels_pyproject.toml
pysenv/tests/unit/: test_config.py  test_pyproject_to_conda.py  test_settings_writter.py
pysenv/tests_unit/: conftest.py  test_config.py  test_pyproject_to_conda.py
pysenv/tests_unit/static/: pysenv_override_pyproject.toml  simple_pyproject.toml
scripts/: build_md_from_pydantic.py
search/: search_index.json
senv/: command_lambdas.py  conda_publish.py  config.py  errors.py  log.py  main.py  package.py  pyproject.py  pyproject_to_conda.py  settings_writer.py  shell.py  utils.py
senv/commands/: config.py  env.py  lock.py  package.py  settings_writer.py  venv.py
senv/dynamic_dependencies/senv_package_tools/: conda_env.lock.json  pyproject.toml
senv/dynamic_depenencies/anaconda_client_locked/: pyproject.toml
senv/package/: package.py
senv/senvx/: conda_env.lock.json  main.py  models.py  pyproject.toml
senv/senvx/tests/: conftest.py
senv/senvx/tests/static/: black-standard-conda-lock  black-with-no-name.lock.json
senv/senvx/tests/unit/: test_install.py
senv/settings/: config.py  settings_writer.py
senv/tests/: conftest.py
senv/tests/integration/: poetry_test_remove.py  test_cli_env.py  test_cli_package.py  test_cli_venv.py
senv/tests/static/: appdirs_combined_lock.json  appdirs_pyproject.toml  senv_override_pyproject.toml  small_conda_pyproject.toml  with_conda_channels_pyproject.toml
senv/tests/unit/: conftest.py  test_config.py  test_pyproject_to_conda.py  test_settings_writter.py
senvx/: conda_venv.lock.json  errors.py  main.py  models.py  pyproject.toml
senvx/tests/static/: black-corrupted.lock.json  black-with-meta.lock.json
senvx/tests/unit/: test_install.py  tests_install.py
