[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pysenv"
version = "0.1.0"
description = ""
authors = ["Jorge <jorge.girazabal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
ensureconda = "^1.4.0"
appdirs = "^1.4.4"
conda-lock = "^0.7.3"
typer = "^0.3.2"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"
pytest = "^6.2.1"
pytest-mock = "^3.4.0"
black = "^20.8b1"


[tool.pysenv]
venv-name = "pysenv_test_name"
conda-channels = [
    "conda-forge",
    "defaults"
]
