[build-system]
requires = ["poetry>=0.12", ]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "senv"
version = "0.0.0a2"
description = "Senv (Super Environment) is a tool to simplify dependency management, packaging, distribution, and consumption of your applications and libraries."
authors = ["Jorge <jorge.girazabal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://JorgeGarciaIrazabal.github.io/senv"
include = ["senv/dynamic_dependencies/**/*"]

[tool.poetry.scripts]
senv = 'senv.main:app'

[tool.poetry.dependencies]
python = ">=3.7.0, <3.10.0"
ensureconda = "^1.4.0"
appdirs = "^1.4.4"
conda-lock = ">0.7.3, <1.0.0"
typer = ">0.3.2, <1.0.0"
pydantic = "^1.7.3"
poetry-core = "^1.0.0"
progress = "^1.5"
pexpect = "^4.0.0"
shellingham = "^1.0.0"
senvx = ">=0.0.1, <1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-mock = "^3.4.0"
black = "^20.8b1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.2.0"
mkdocs = "^1.2.2"
mkdocs-material = "^8.1.0"
mkdocs-material-extensions = "^1.0.0"
mkdocs-click = "^0.5.0"


[tool.senv]
conda-channels = [
    "conda-forge",
    "defaults",
    "jorgegarciairazabal"
]
build-system = "conda"

[tool.senv.env]
conda-lock-platforms = ["osx-64", "linux-64", "win-64"]
